[package]
name = "multichoose_with_replacement"
version = "0.1.0"
authors = ["Noam Elul <nelul@seas.upenn.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
multiset = "0.0.5"
integer-partitions = "0.1.1"
num-integer = "0.1.44"
streaming-iterator = "0.1.5"